--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="assets/images/react.png" class="app-logo" alt="Logotipo">
         
         <span id="brand">
-            <strong>Master</strong>Maquetacion Web
+            <strong>Maquetacion</strong>Web
         </span> 
     </div>
     <!-- Menu -->
@@ -38,6 +38,9 @@
             </li>
         </ul>
     </nav>
+
+    <!-- Limpiar flotados -->
+<div class="clearfix"></div>
 </div>
 </header>
 </body>
