--- a/index.html
+++ b/index.html
@@ -38,10 +38,14 @@
             </li>
         </ul>
     </nav>
-
     <!-- Limpiar flotados -->
 <div class="clearfix"></div>
 </div>
 </header>
+
+<div id="slider" class="slider-big">
+    <h1> Bienvenido al ejemplo de maquetacion web para uso en frameworks </h1>
+    <a href="#" class="btn-white">Ir al blog</a>
+</div>
 </body>
 </html>
