--- a/blog.html
+++ b/blog.html
@@ -43,39 +43,9 @@
 </div>
 </header>
 
-<div id="slider" class="slider-big">
-    <h1> Bienvenido al ejemplo de maquetacion web para uso en frameworks </h1>
-    <a href="#" class="btn-white">Ir a blog</a>
+<div id="slider" class="slider-small">
+    <h1> Blog</h1>
+
 </div>
-<div class="center">
-    <section id="content">
-    <h3>Últimos Articulos </h3>  <!-- Listado articulos -->
-    </section>
-
-    <aside id="sidebar" >
-        <div id="nav-blog" class="sidebar-item">
-          <h3>Puedes hacer esto</h3>
-          <a href="#">Crear articulo</a> 
-        </div>
-
-        <div id="nav-blog" class="sidebar-item">
-            <h3>Buscador</h3>
-            <p>Encuentra el articulo que buscas</p>
-            <form action="">
-                <input type="text" name="search" id="">
-                <input type="submit" name="submit" vvalue="Buscar" id="">
-            </form>
-             
-          </div>
-    </aside>
-
-    <div class="clearfix"></div>
-</div>
-<footer id="footer">
-    <div class="center">
-        <p> &copy; </p>
-    </div>
-
-</footer>
 </body>
 </html>
