Trabajando Con Responsive

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <span class="date">
             Hace 5 minutos
         </span>
-        <a href="#">Leer más</a>
+        <a href="article.html">Leer más</a>
         <div class="clearfix"></div>
     </article>
     <!-- Añadir articulos via js -->
